[gd_scene load_steps=2 format=3 uid="uid://caun3kuk14f6j"]

[ext_resource type="Script" path="res://Objects/UI/AbilityPickUp/AbilityButton.gd" id="1_58cgq"]

[node name="AbilityButton" type="Control"]
custom_minimum_size = Vector2(500, 700)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_58cgq")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Button/MarginContainer"]
layout_mode = 2

[node name="NameText" type="Label" parent="Button/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Name"
horizontal_alignment = 1

[node name="AbilityTypeText" type="Label" parent="Button/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Na
"
horizontal_alignment = 1

[node name="DescriptionText" type="Label" parent="Button/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Description"
autowrap_mode = 2
